--- a/src/App.less
+++ b/src/App.less
@@ -12,6 +12,8 @@ html{
   background: @black;
   padding-left: 20px;
   padding-right: 20px;
+  border-bottom: @border-width-base @border-style-base @border-color-split;
+  height: 64px;
 }
 
 .App {
