--- a/src/modeling/graph_editor/GraphEditor.less
+++ b/src/modeling/graph_editor/GraphEditor.less
@@ -2,7 +2,8 @@
 
 .add_button {
   z-index: 4;
-  margin: 10px
+  margin: 20px;
+  float: right;
 }
 .react-flow__selection {
   background: rgba(0, 89, 220, 0.08);
