change navigation again...add stubs for other screens

--- a/src/modeling/graph_editor/GraphEditor.less
+++ b/src/modeling/graph_editor/GraphEditor.less
@@ -2,9 +2,18 @@
 
 .add_button {
   z-index: 4;
-  margin: 20px;
+  margin-top: 24px;
+  margin-right: 24px;
   float: right;
 }
+
+.history_button {
+  z-index: 4;
+  margin-top: 24px;
+  margin-right: 10px;
+  float: right;
+}
+
 .react-flow__selection {
   background: rgba(0, 89, 220, 0.08);
   border: 1px dotted rgba(0, 89, 220, 0.8);
